[package]
name = "LeagueTrigger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.1.3"
native-tls = "0.2.11"
reqwest = { version = "0.11", features = ["rustls-tls","blocking"] }
serde_json = "1.0.107"
thread = "0.1.0"
tokio = { version = "1.33.0", features = ["full"] }
